--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -42,6 +42,15 @@ header > h1 {
     }
 }
 
+#header-break {
+    margin-bottom: 0;
+}
+
+#arrow {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+};
 
 #index-body {
     margin: 1em;
