--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,9 @@
   <%= link_to "About", controller: "welcome", action: "about" %>
 </header>
 
-<hr />
+<hr id="header-break" />
+
+<%= image_tag("arrow.png", :alt => "How do I HashCatch?", :id => "arrow") %>
 
 <div id="index-body">
   <ul id="recent-list">
