+ help text slidedown

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,9 @@
 </header>
 
 <hr id="header-break" />
+<div id="help">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas mauris in ligula venenatis bibendum. Etiam varius magna in est ornare aliquam. In dapibus congue vulputate. Nullam facilisis mauris et justo cursus, quis feugiat urna rhoncus. Ut volutpat ligula ut sem porttitor, vitae pellentesque urna rhoncus. Suspendisse id ultrices nibh. Phasellus accumsan, nisl nec tempus dictum, tortor risus imperdiet felis, non rutrum dui nunc non ante. Pellentesque vitae eleifend eros.
+</div>
 
 <%= image_tag("arrow.png", :alt => "How do I HashCatch?", :id => "arrow") %>
 
