--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -46,6 +46,14 @@ header > h1 {
     margin-bottom: 0;
 }
 
+#help {
+    display: none;
+    background-color: #EEE;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #arrow {
     display: block;
     margin-left: auto;
