styling help text

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,12 @@
-<h3>About</h3>
+<h2>About</h2>
 
-TODO Blah
+    <h4 id="help-tagline">
+      <em>HashCatch lets you control stuff through your regular tweets</em>
+    </h4>
+    
+    For example, you tweet this:
+
+    <blockquote class="twitter-tweet"><p>#2 book is Huckleberry Finn <a href="https://twitter.com/search?q=%23HashCatch&amp;src=hash">#HashCatch</a></p>&mdash; Ben Eills (@beneills) <a href="https://twitter.com/beneills/statuses/381105085213716480">September 20, 2013</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    and HashCatch undertstands you:
