--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,24 +1,44 @@
-<header>
-  <%= image_tag("logo-500.png", :alt => "HashCatch", :id => "logo") %>
-  <%= link_to "About", controller: "welcome", action: "about" %>
-</header>
 
-<hr id="header-break" />
 <div id="help">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas mauris in ligula venenatis bibendum. Etiam varius magna in est ornare aliquam. In dapibus congue vulputate. Nullam facilisis mauris et justo cursus, quis feugiat urna rhoncus. Ut volutpat ligula ut sem porttitor, vitae pellentesque urna rhoncus. Suspendisse id ultrices nibh. Phasellus accumsan, nisl nec tempus dictum, tortor risus imperdiet felis, non rutrum dui nunc non ante. Pellentesque vitae eleifend eros.
-</div>
+  <div id="help-text">
+  <div id="help-text-inner">
+    <h4 id="help-tagline">
+      <em>HashCatch lets you control stuff through your regular tweets</em>
+    </h4>
 
-<%= image_tag("arrow.png", :alt => "How do I HashCatch?", :id => "arrow") %>
+    For example, you tweet this:
+
+    <blockquote class="twitter-tweet"><p>#2 book is Huckleberry Finn <a href="https://twitter.com/search?q=%23HashCatch&amp;src=hash">#HashCatch</a></p>&mdash; Ben Eills (@beneills) <a href="https://twitter.com/beneills/statuses/381105085213716480">September 20, 2013</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    and HashCatch undertstands you:
+<br />
+<br />
+TODO
+
+<button id="help-dismiss">Dismiss</button>
+  </div>
+  </div>
+  <%= image_tag("arrow.png", :alt => "How do I HashCatch?", :id => "arrow") %>
+</div>
 
 <div id="index-body">
   <ul id="recent-list">
     <li>
     <form class="pure-form">
       <div id="tweet-body-expander">
-	<input id="tweet-body" type="text" placeholder="My #1 book is To Kill a Mockingbird">
+	  <input id="tweet-body" type="text" placeholder="My #1 book is To Kill a Mockingbird">
+      <div id="test">
+	<a href="https://twitter.com/intent/tweet?button_hashtag=HashCatch&text=hello%20world" target="_blank">
+	  <%= image_tag("tweet-button.png", :alt => "Tweet #HashCatch", :id => "tweet-button") %>
+	</a>
+
+	<!-- <a href="https://twitter.com/intent/tweet?button_hashtag=hashcatch&text=My%20%231%20book%20is%20To%20Kill%20a%20Mockingbird" class="twitter-hashtag-button" data-size="large" data-related="hashcatch" data-url="http://hashcatch.com">Tweet #hashcatch</a> -->
+	<!-- <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> -->
       </div>
-      <a href="https://twitter.com/intent/tweet?button_hashtag=hashcatch&text=My%20%231%20book%20is%20To%20Kill%20a%20Mockingbird" class="twitter-hashtag-button" data-size="large" data-related="hashcatch" data-url="http://hashcatch.com">Tweet #hashcatch</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      
+
+      </div>
     </form>
     </li>
 
@@ -47,6 +67,3 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas mauris i
 
 </div>
 
-<footer>
-  Ben Eills, 2013
-</footer>
