--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -24,12 +24,6 @@ header #logo {
     margin-right: auto;
 }
 
-footer {
-    text-align: center;
-    position: absolute;
-    bottom:0;
-    width: 100%;
-}
 
 
 header > h1 {
@@ -47,11 +41,30 @@ header > h1 {
 }
 
 #help {
-    display: none;
-    background-color: #EEE;
+    overflow: hidden;
+}
+
+#help-text {
+//    display: none;
+   overflow: hidden;
+    height: 10px;
+    background-color: $helpColor;
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+//    box-shadow: inset rgba(255,255,255,1) 0px -10px 10px;
+    box-shadow: 0px 5px 5px $helpColor;
+    margin-bottom: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+#help-text-inner {
+    margin: 10px;
+}
+
+#test {
+    display: inline-block;
 }
 
 #arrow {
@@ -72,6 +85,7 @@ header > h1 {
     font-size: 1.2em;
     padding: 8px;
     overflow: hidden;
+    border-radius: 5px;
 }
 
 #recent-list li { background-color: $rowEven;}
@@ -90,6 +104,58 @@ header > h1 {
 //    border-bottom-color: #1ab7ea; fade to twitter color TODO
 }
 
+#tweet-body-expander {
+    display:table;
+    width: 100%;
+}
+
+#tweet-body {
+    display: table-cell;
+    width: 100%;
+}
+#test {
+    display: table-cell;
+    width: 148px;
+}
 .twitter-hashtag-button {
+    float: right;
+}
+
+
+footer {
+    text-align: center;
+    position: absolute;
+    bottom:0;
+    width: 100%;
+}
+
+
+#footer-right {
+    position: absolute;
+    right: 0;
+}
+
+#footer-centre {
+    text-align: center;
+    position: relative
+}
+
+.content {
+    display: block;
+}
+
+.noDown {
+    display: block;
+}
+
+#container {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+#help-dismiss {
+    cursor: pointer;
     float: right;
 }
