--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,25 @@
 </head>
 <body>
 
-<%= yield %>
+<header>
+  <%= link_to( image_tag("logo-300.png", :alt => "HashCatch", :id => "logo"), "/") %>
+
+</header>
+
+<hr id="header-break" />
+
+<div id="container">
+  <%= yield %>
+
+
+</div>
+
+  <footer>
+    <div id="footer-centre">
+      <div id="footer-right"><%= link_to "About", controller: "welcome", action: "about" %></div>
+      Ben Eills, 2013
+    </div>
+  </footer>
 
 </body>
 </html>
