--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -1,7 +1,4 @@
-<h1>Users#view</h1>
-<p>Find me in app/views/users/view.html.erb</p>
-
-<h3>User: <%= @user.username %></h3> <%= @r %>
+<h2><%= @user.username %></h2>
 
 <% @categories.each do |title, entries| %>
     <h5><%= title.pluralize.capitalize %></h5>
