--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,9 @@
 
 <header>
   <%= link_to( image_tag("logo-300.png", :alt => "HashCatch", :id => "logo"), "/") %>
-
 </header>
 
-<hr id="header-break" />
+<!-- <hr id="header-break" /> -->
 
 <div id="container">
   <%= yield %>
