--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,8 @@ TODO
 <button id="help-dismiss">Dismiss</button>
   </div>
   </div>
-  <%= image_tag("arrow.png", :alt => "How do I HashCatch?", :id => "arrow") %>
+  <!-- <%= image_tag("arrow.png", :alt => "How do I HashCatch?", :id => "arrow") %> -->
+  <button id="arrow">show</button>
 </div>
 
 <div id="index-body">
