--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @user.username %></h2>
+<h1 id="username"><a href="https://twitter.com/beneills"><%= "@#{@user.username}" %></a></h2>
 
 <% @categories.each do |title, entries| %>
     <h5><%= title.pluralize.capitalize %></h5>
