--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -1,16 +1,40 @@
-<h1 id="username"><a href="https://twitter.com/beneills"><%= "@#{@user.username}" %></a></h2>
+<div id="user-profile">
+  <img id="profile-image" src="<%= @user.profile_image_url %>" />
+  <div id="names">
+    <span id="fullname"><%= @user.name %></span>
+    <span id="username"><a href="https://twitter.com/beneills"><%= "@#{@user.username}" %></a></span>
+  </div>
+  <div style="clear:both;"></div> <!-- TODO http://stackoverflow.com/questions/6681768/how-to-not-use-div-class-clear-in-markup -->
+</div>
 
-<% @categories.each do |title, entries| %>
+<div id="applications">
+  <% app = @applications.first %>
+
+  <% if app.name == 'Top' %>
+  <span class="application">
+    <% app.categories.each do |title, entries| %>
     <h5><%= title.pluralize.capitalize %></h5>
     <ol>
       <li><%= entries[1].text %></li>
       <li><%= entries[2].text %></li>
       <li><%= entries[3].text %></li>
     </ol>
-<% end %>
+    <% end %>
+  </span>
+  <% end %>
 
-<%= "No data!" if @categories.empty? %>
+  <span class="application">    
+    <h2 style="margin-top: 0;">app2</h2>
 
-<br /><br />
+    content, blah...
+  </span>
 
-<a href="/">back</a>
+  <span class="application">
+    <img src="http://www.wolframcdn.com/alphalogo-large.png" />
+  </span>
+
+
+  <div style="clear:both;"></div> <!-- TODO http://stackoverflow.com/questions/6681768/how-to-not-use-div-class-clear-in-markup -->
+</div>
+
+
