--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,13 +8,17 @@
 
     For example, you tweet this:
 
-    <blockquote class="twitter-tweet"><p>#2 book is Huckleberry Finn <a href="https://twitter.com/search?q=%23HashCatch&amp;src=hash">#HashCatch</a></p>&mdash; Ben Eills (@beneills) <a href="https://twitter.com/beneills/statuses/381105085213716480">September 20, 2013</a></blockquote>
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <span id="top-example-tweet">
+      <blockquote class="twitter-tweet"><p>#2 book is Huckleberry Finn <a href="https://twitter.com/search?q=%23HashCatch&amp;src=hash">#HashCatch</a></p>&mdash; Ben Eills (@beneills) <a href="https://twitter.com/beneills/statuses/381105085213716480">September 20, 2013</a></blockquote>
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </span>
 
-    and HashCatch undertstands you:
-<br />
-<br />
-TODO
+    and HashCatch understands you:
+
+    <%= image_tag("top-example.png", :alt => "Example Output", :id => "top-example") %>
+
+
+Try it now!
 
 <button id="help-dismiss">Dismiss</button>
   </div>
