Hide help cookie

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,6 @@
+<!-- Help cookie-->
+<%= javascript_include_tag "jquery.cookie.js", "data-turbolinks-track" => true %>
+
 <div id="help">
   <h3>
     <em>HashCatch lets you control stuff through your regular tweets</em>
