--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -12,7 +12,7 @@
     float: left;
 }
 
-#names {
+#user-profile #names {
     float: left;
     margin-left: 1em;
 }
@@ -27,7 +27,9 @@
 
 }
 
-
+#user-profile #buttons {
+    float: right;
+}
 
 
 #applications {
@@ -35,13 +37,8 @@
     margin-bottom: 2em;
 }
 
-
 .application {
-    display: inline-block; // shrink
-
-    float: left;
-
-    margin-right: 0.5em;
+    display: block; // shrink
     margin-bottom: 0.5em;
     padding: 1em;
 
@@ -53,3 +50,59 @@
     border-radius: 7px;
 }
 
+.application-title {
+    display: block;
+    font-size: 1.5em;
+    margin-bottom: 0.7em;
+}
+
+/* .application { */
+/*     display: inline-block; // shrink */
+
+/*     float: left; */
+
+/*     margin-right: 0.5em; */
+/*     margin-bottom: 0.5em; */
+/*     padding: 1em; */
+
+/*     background-color: #EEEEFF; */
+
+/*     border-style: solid; */
+/*     border-width: 1px; */
+/*     border-color: #CCC; */
+/*     border-radius: 7px; */
+/* } */
+
+.subapplication {
+    display: inline-block;
+    float: left;
+
+    margin-right: 1em;
+    padding: 0.5em;
+    padding-right: 1em;
+
+    background-color: #DDDDFF;
+
+    border-style: solid;
+    border-width: 1px;
+    border-color: #CCC;
+    border-radius: 7px;
+}
+
+.subapplication-title {
+    font-weight: bold;
+}
+
+// Not found
+#notfound-tagline {
+    margin-bottom: 2em;
+}
+
+.twitter-timeline {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 500px;
+    height:400px;
+}
