--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -4,34 +4,26 @@
     <span id="fullname"><%= @user.name %></span>
     <span id="username"><a href="https://twitter.com/beneills"><%= "@#{@user.username}" %></a></span>
   </div>
+
+  <div id="buttons">
+    <a href="https://twitter.com/<%= @user.username %>" class="twitter-follow-button" data-show-count="false">Follow @<%= @user.username %></a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  </div>
+
   <div style="clear:both;"></div> <!-- TODO http://stackoverflow.com/questions/6681768/how-to-not-use-div-class-clear-in-markup -->
 </div>
 
-<div id="applications">
-  <% app = @applications.first %>
 
-  <% if app.name == 'Top' %>
-  <span class="application">
-    <% app.categories.each do |title, entries| %>
-    <h5><%= title.pluralize.capitalize %></h5>
-    <ol>
-      <li><%= entries[1].text %></li>
-      <li><%= entries[2].text %></li>
-      <li><%= entries[3].text %></li>
-    </ol>
-    <% end %>
-  </span>
+<div id="applications">
+  <% @applications.each do |app| %>
+  <%= render partial: app.name.downcase, locals: {app: app} %>
   <% end %>
 
-  <span class="application">    
-    <h2 style="margin-top: 0;">app2</h2>
 
-    content, blah...
-  </span>
-
-  <span class="application">
-    <img src="http://www.wolframcdn.com/alphalogo-large.png" />
-  </span>
+<span class="application">
+  <span class="application-title">What's next?</span>
+  What do you want to see next? <a href="mailto:TODO">Tell us!</a>
+</span>
 
 
   <div style="clear:both;"></div> <!-- TODO http://stackoverflow.com/questions/6681768/how-to-not-use-div-class-clear-in-markup -->
