--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,19 @@
       <%= link_to( image_tag("logo-300.png", :alt => "HashCatch", :id => "logo"), "/") %>
     </header>
 
-    <div id="container">
+    <div class="container">
       <%= yield %>
+    </div>
 
-      <footer>
+    <footer>
+      <div class="container">
 	<!-- <div id="footer-centre"> -->
 	<!--   <div id="footer-right"><%= link_to "About", controller: "welcome", action: "about" %></div> -->
 	<!--   Ben Eills, 2013 -->
 	<!-- </div> -->
 	Ben Eills, 2013
 	<span id="about-link"><%= link_to "About", controller: "welcome", action: "about" %></span>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
