--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -8,7 +8,7 @@ body {
 
 /* header */
 header {
-    background-color: $helpColor;
+    background-color: $headerColor;
     margin-bottom: 3em;
 }
 
@@ -16,6 +16,10 @@ header #logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+#main-content {
+    min-height: 65%; // push footer
 }
 
 /* container */
@@ -27,15 +31,21 @@ header #logo {
 
 /* footer */
 footer {
-    background-color: $helpColor;
+    background-color: $footerColor;
     margin-top: 3em;
 //    position: fixed;
 //    bottom:0;
-    height: 4em;
+    padding-top: 3em;
     width: 100%;
     
 //    text-align: center;
 
+}
+
+footer .container {
+    width: 1000px;
+    height: 100%;
+    vertical-align: centre;
 }
 
 #about-link {
@@ -56,6 +66,6 @@ footer {
 
 /* links */
 a, a:visited {
-    color: #0084B4;
+    color: $linkColor;
 }
 
