--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import "globals.css.scss";
 
 // User Profile
 #user-profile {
@@ -42,11 +43,11 @@
     margin-bottom: 0.5em;
     padding: 1em;
 
-    background-color: #EEEEFF;
+    background-color: $applicationBackgroundColor;
 
     border-style: solid;
     border-width: 1px;
-    border-color: #CCC;
+    border-color: $applicationBorderColor;
     border-radius: 7px;
 }
 
@@ -56,23 +57,6 @@
     margin-bottom: 0.7em;
 }
 
-/* .application { */
-/*     display: inline-block; // shrink */
-
-/*     float: left; */
-
-/*     margin-right: 0.5em; */
-/*     margin-bottom: 0.5em; */
-/*     padding: 1em; */
-
-/*     background-color: #EEEEFF; */
-
-/*     border-style: solid; */
-/*     border-width: 1px; */
-/*     border-color: #CCC; */
-/*     border-radius: 7px; */
-/* } */
-
 .subapplication {
     display: inline-block;
     float: left;
@@ -81,11 +65,11 @@
     padding: 0.5em;
     padding-right: 1em;
 
-    background-color: #DDDDFF;
+    background-color: $subApplicationBackgroundColor;
 
     border-style: solid;
     border-width: 1px;
-    border-color: #CCC;
+    border-color: $subApplicationBorderColor;
     border-radius: 7px;
 }
 
