--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <%= link_to( image_tag("logo-300.png", :alt => "HashCatch", :id => "logo"), "/") %>
     </header>
 
-    <div class="container">
+    <div id="main-content" class="container">
       <%= yield %>
     </div>
 
