--- a/app/views/users/view.html.erb
+++ b/app/views/users/view.html.erb
@@ -21,7 +21,11 @@
 
 
 <span class="application">
-  <span class="application-title">What's next?</span>
+  <div class="application-head">
+    <span class="application-title">What's next?</span>
+  </div>
+  <div style="clear:both;"></div> <!-- TODO http://stackoverflow.com/questions/6681768/how-to-not-use-div-class-clear-in-markup -->
+
   What do you want to see next? <a href="mailto:TODO">Tell us!</a>
 </span>
 
