Fix JS problems

--- a/app/views/users/_top.html.erb
+++ b/app/views/users/_top.html.erb
@@ -5,7 +5,7 @@
       save your top books, albums and movies:
 
       <code>
-	[my] no|# 1|2|3 [favorite] album|cd|book|film|movie [is] &lt;name&gt;
+	[my] no|# 1|2|3 [favorite] album|cd|book|film|movie [is] &lt;name&gt; #hashcatch
       </code>
     </span>
   </div>
