--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -10,12 +10,22 @@ body {
 header {
     background-color: $headerColor;
     margin-bottom: 3em;
+    padding-bottom: 5px;
 }
 
 header #logo {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: -18px; // image whitespace
+    float: left;
+}
+
+header #tagline {
+    display: block;
+    float: left;
+    margin-top: 65px;
+    margin-left: 30px;
+    font-size: 1.4em;
+    font-style: italic;
 }
 
 #main-content {
@@ -36,6 +46,7 @@ footer {
 //    position: fixed;
 //    bottom:0;
     padding-top: 3em;
+    padding-bottom: 0.4em;
     width: 100%;
     
 //    text-align: center;
