--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,15 @@
 
   <body>
     <header>
-      <%= link_to( image_tag("logo-300.png", :alt => "HashCatch", :id => "logo"), "/") %>
+      <div class="container">
+	<%= link_to( image_tag("logo-300.png", :alt => "HashCatch", :id => "logo"), "/") %>
+
+	<span id="tagline">
+	  Semanticize your tweets.
+	</span>
+
+	<div style="clear:both;"></div> <!-- TODO http://stackoverflow.com/questions/6681768/how-to-not-use-div-class-clear-in-markup -->
+      </div>
     </header>
 
     <div id="main-content" class="container">
