--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -22,16 +22,8 @@
 
 #help h3 {
     font-size: 1.5em;
+    margin-top: 0.2em;
 }
-
-#help-dismiss {
-    cursor: pointer;
-}
-
-#help-show {
-    cursor: pointer;
-}
-
 
 #welcome-content {
     margin-top: 1em;
