--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,26 +2,10 @@
 <%= javascript_include_tag "jquery.cookie.js", "data-turbolinks-track" => true %>
 
 <div id="help">
-  <h3>
-    <em>HashCatch lets you control stuff through your regular tweets</em>
-  </h3>
-
-  For example, you tweet this:
-
-  <span id="top-example-tweet">
-    <blockquote class="twitter-tweet"><p>#2 book is Huckleberry Finn <a href="https://twitter.com/search?q=%23HashCatch&amp;src=hash">#HashCatch</a></p>&mdash; Ben Eills (@beneills) <a href="https://twitter.com/beneills/statuses/381105085213716480">September 20, 2013</a></blockquote>
-    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </span>
-  
-  and HashCatch understands you:
-  
-  <%= image_tag("top-example.png", :alt => "Example Output", :id => "top-example") %>
-  
-  
-  Try it now!
-  <a id="help-dismiss">Dismiss</a>
+  <%= render partial: "help", locals: {} %>
 </div>
-<a id="help-show">Show Help</a>
+
+<a id="help-show" class="pointer">Show Help</a>
 
 <div id="welcome-content">
   <div id="recent">
