--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -80,3 +80,15 @@ a, a:visited {
     color: $linkColor;
 }
 
+
+/* generic */
+.pointer {
+    cursor: pointer;
+}
+
+.link-button {
+    cursor: pointer;
+    background-color: white;
+    padding: 2px;
+    border-radius: 3px;
+}
